--- a/config/database.yml
+++ b/config/database.yml
@@ -20,10 +20,13 @@ default: &default
   # For details on connection pooling, see Rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  host: localhost
+  username: postgres
+  password: root
 
 development:
   <<: *default
-  database: pits_development
+  database: pits_desarrollo
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -57,7 +60,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: pits_test
+  database: pits_pruebas
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -80,6 +83,6 @@ test:
 #
 production:
   <<: *default
-  database: pits_production
+  database: pits_produccion
   username: pits
   password: <%= ENV['PITS_DATABASE_PASSWORD'] %>
