--- a/config/storage.yml
+++ b/config/storage.yml
@@ -21,7 +21,7 @@ google:
     type: "service_account"
     project_id: "pitsimagen"
     private_key_id: <%= ENV["GOOGLE_PRIVATE_KEY_ID"] %>
-    private_key: <%= OpenSSL::PKey::RSA.new(ENV["GOOGLE_PRIVATE_KEY"]) %>
+    private_key: <%= ENV["GOOGLE_PRIVATE_KEY"].lines.join("\\n") %>
     client_email: <%= ENV["GOOGLE_CLIENT_EMAIL"] %>
     client_id: <%= ENV["GOOGLE_CLIENT_ID"] %>
     auth_uri: "https://accounts.google.com/o/oauth2/auth"
