--- a/config/storage.yml
+++ b/config/storage.yml
@@ -20,10 +20,10 @@ google:
   credentials:
     type: "service_account"
     project_id: "pitsimagen"
-    private_key_id: <%= ENV["GOOGLE_PRIVATE_KEY_ID"] %>
-    private_key: <%= ENV["GOOGLE_PRIVATE_KEY"].lines.join("\\n") %>
-    client_email: <%= ENV["GOOGLE_CLIENT_EMAIL"] %>
-    client_id: <%= ENV["GOOGLE_CLIENT_ID"] %>
+    private_key_id: "<%= ENV["GOOGLE_PRIVATE_KEY_ID"] %>"
+    private_key: "<%= ENV["GOOGLE_PRIVATE_KEY"].lines.join("\\n") %>"
+    client_email: "<%= ENV["GOOGLE_CLIENT_EMAIL"] %>"
+    client_id: "<%= ENV["GOOGLE_CLIENT_ID"] %>"
     auth_uri: "https://accounts.google.com/o/oauth2/auth"
     token_uri: "https://oauth2.googleapis.com/token"
     auth_provider_x509_cert_url: "https://www.googleapis.com/oauth2/v1/certs"
